z-index overflow  fix

--- a/css/main.less
+++ b/css/main.less
@@ -850,7 +850,7 @@ input[type=submit] {
 	bottom: @bottom;
 	right: 0;
 	padding: 40px 0 0 0;
-	overflow: visible;
+	overflow: scroll;
 	.box-sizing(border-box);
 	margin: 0;
 	z-index: 0;
@@ -1911,6 +1911,7 @@ input[type=submit] {
 	padding-top: 10px;	
 	background: @main-color;
 	overflow: visible;
+	z-index: 100;
 	.logo-ruler{
 		width: 767px;
 		float: left;
